[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audit-log-pro"
version = "0.1.0"
description = "Structured audit logging for compliance"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "pre-commit>=3.7"]

[tool.hatch.build.targets.wheel]
packages = ["src/audit_log"]
